--- a/index.html
+++ b/index.html
@@ -3,33 +3,28 @@
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <script src="angular.min.js"></script>
-      <script src="app.js"></script>
+    <script src="app.js"></script>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
-
-    .green { font-size: 1.3em; font-weight: bold; color:green; border:1px solid green}
-    .red { font-size: 1.3em; font-weight: bold; color:red; border:1px solid red }
+      .message { font-size: 1.3em; font-weight: bold; }
     </style>
   </head>
-<body ng-app='LunchCheck'>
-   <div class="container" ng-controller="LunchCheckController">
+<body ng-app="LunchCheck">
+   <div class="container" ng-controller="LunchController">
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
-             <input ng-model="menu" id="lunch-menu" type="text"
+             <input id="lunch-menu" type="text" ng-model="breakfastList"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             class="form-control" style="border-color:{{color}}"> (NOT considering empty items)
          </div>
          <div class="form-group">
-             <button ng-click="checkdisplay()" class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="checkTooMuchLunch()">Check If Too Much</button>
          </div>
-
-
- <span ng-class="styleclass">{{message}}</span>
- {{menuarray}}
-           <!-- Your message can go here. -->
-
+         <div class="form-group message">
+           Message: <font color="{{color}}">{{message}}</font>
+         </div>
    </div>
 
 </body>
